--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                 <div class="edu-details">
                     <div class="edu-title">Matriculation (ICSE)</div>
                     <div class="edu-place">Motilal Nehru Public School</div>
-                    <div class="edu-time">2017-2019</div>
+                    <div class="edu-time">2019</div>
                 </div>
             </div>            
         </div>        
